# faebuild

./: .gitignore  Cargo.toml  buildconfig.yaml
src/: build.rs  buildconfig.rs  cli.rs  main.rs  recipe.rs  utils.rs
src/src/: git.rs
src/utils/: git.rs  mod.rs  patch.rs  private.rs
